crates/lang/macro/tests/ui/contract/fail/event-conflicting-storage.stderr
error: encountered conflicting ink! attribute argument
 --> tests/ui/contract/fail/event-conflicting-storage.rs:9:11
  |
9 |     #[ink(storage)]
  |           ^^^^^^^
